<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:hint="@string/type_in_email"
                android:textSize="48sp"
                android:inputType="textEmailAddress"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PWInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/type_in_password"
                android:orientation="vertical"
                android:textSize="48sp"
                android:inputType="textPassword"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_in_your_user_name"
                android:orientation="vertical"
                android:textSize="48sp"
                android:inputType="text"/>

            <Button
                android:id="@+id/SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="150dp"
                android:text="@string/sign_up" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>